testPath